commit corrected file
git push

--- a/winterpark-fl-usa-ml.ipynb
+++ b/winterpark-fl-usa-ml.ipynb
@@ -6,8 +6,9 @@
    "source": [
     "## Winter Park, FL, USA\n",
     "\n",
-    "Born and raised in Winter Park, FL, I moved to Boulder as soon as I could. Winter Park is the home of Rollins College, the Winter Park Chain of Lakes, and the Morse Museum. Additionally, the annual Winter Park Sidewalk Art Festival draws both locals and visitors downtown to Park Avenue (additional information found at http://wpsaf.org/). <figure>\n",
-    "    <img src=\"/Users/Michael Levis/earth-analytics-bootcamp/Image.jpg\"/>"
+    "Born and raised in Winter Park, FL, I moved to Boulder as soon as I could. Winter Park is the home of Rollins College, the Winter Park Chain of Lakes, and the Morse Museum. Additionally, the annual Winter Park Sidewalk Art Festival draws both locals and visitors downtown to Park Avenue (additional information found at http://wpsaf.org/). \n",
+    "<figure>\n",
+    "    <img src=\"https://www.rollins.edu/images-department/main-images/rollins-college-campus-lake-virginia-overhead.jpg\">"
    ]
   },
   {
