--- a/Boston-MA-USA-md.ipynb
+++ b/Boston-MA-USA-md.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Boston is a beautiful harbor city with a huge amount of history."
+    "# Boston, MA, USA\n",
+    "\n",
+    "\n",
+    "Boston is a beautiful harbor city with a huge amount of history.  Did you know: Boston has the oldest light rail system in the US?\n",
+    "\n",
+    "[logo]: https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Boston_Montage.jpg/800px-Boston_Montage.jpg \"Some of Boston's views\"\n",
+    "\n"
    ]
   }
  ],
